--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="style.css" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="style.css">
         <title>Home-Barton Farms</title>
     </head>
     <body>
