--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         </ul>
         </nav>
         </header>
-        <img src="C:\Users\dillo\Dev Projects\Barton Farms\images\gen-farm.jpg" alt="farm" id="farm">
-        <img src="C:\Users\dillo\Dev Projects\Barton Farms\images\Barton's Farm.png" alt="logo" id="logo2">
+        <img src="images/gen-farm.jpg" alt="farm" id="farm">
+        <img src="images/BartonsFarm.png" alt="logo" id="logo2">
         <h2>Home</h2>
     </body>
     <footer>
