fixed nav link path

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <header>
-            <img src="C:\Users\dillo\Dev Projects\Barton Farms\images\Barton's Farm.png" alt="logo" id="logo">
+            <img src="images/BartonsFarm.png" alt="logo" id="logo">
         <nav>
         <ul>
             <li><a href="C:\Users\dillo\Dev Projects\Barton Farms\index.html.html">Home</a></li>
