--- a/html/contact.html
+++ b/html/contact.html
@@ -6,11 +6,11 @@
     </head>
     <body>
         <ul>
-            <li><a href="C:\Users\dillo\Dev Projects\Barton Farms\index.html.html">Home</a></li>
-            <li><a href="C:\Users\dillo\Dev Projects\Barton Farms\about-us.html">About Us</a></li>
-            <li><a href="C:\Users\dillo\Dev Projects\Barton Farms\order.html">Order</a></li>
-            <li><a href="C:\Users\dillo\Dev Projects\Barton Farms\gallery.html">Gallery</a></li>
-            <li><a href="C:\Users\dillo\Dev Projects\Barton Farms\contact.html">Contact</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="about-us.html">About Us</a></li>
+            <li><a href="order.html">Order</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
         <h1>Barton Farms</h1>
         <h2>Contact</h2>
