--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
             <img src="images/BartonsFarm.png" alt="logo" id="logo">
         <nav>
         <ul>
-            <li><a href="C:\Users\dillo\Dev Projects\Barton Farms\index.html.html">Home</a></li>
-            <li><a href="C:\Users\dillo\Dev Projects\Barton Farms\about-us.html">About Us</a></li>
-            <li><a href="C:\Users\dillo\Dev Projects\Barton Farms\order.html">Order</a></li>
-            <li><a href="C:\Users\dillo\Dev Projects\Barton Farms\gallery.html">Gallery</a></li>
-            <li><a href="C:\Users\dillo\Dev Projects\Barton Farms\contact.html">Contact</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="html/about-us.html">About Us</a></li>
+            <li><a href="html/order.html">Order</a></li>
+            <li><a href="html/gallery.html">Gallery</a></li>
+            <li><a href="html/contact.html">Contact</a></li>
         </ul>
         </nav>
         </header>
@@ -21,6 +21,7 @@
         <img src="images/BartonsFarm.png" alt="logo" id="logo2">
         <h2>Home</h2>
     </body>
+    <p>Welcome to our farm!</p>
     <footer>
         <p></p>
     </footer>
